--- a/css/variables.less
+++ b/css/variables.less
@@ -7,6 +7,21 @@
 @mobile: ~"(min-width:320px) and (max-width:767px)";
 @desktop: ~"(min-width: 768px)";
 
+@bwRed: #e22016;
+@hsGreen: #3d822e;
+@rkaRed: #ee3124;
+@vfBlue: #005bab;
+@ytRed: #dc1e37;
+@colOrange: #e87722;
+@cubYellow: #ffc82f;
+@comGreen: #77bd1e;
+
+@twitter: rgba(0, 172, 237, 1);
+@facebook: rgba(59, 89, 152, 1);
+@google: rgba(221, 75, 57, 1);
+@linkedin: rgba(81, 127, 164, 1);
+@other: #4c4c4c;
+
 @keyframes bounceIn {
   0% {
     transform: scale(0.1);
