--- a/css/styles.less
+++ b/css/styles.less
@@ -114,7 +114,8 @@ body, html {
     }
 
     #projects {
-        background-color: #ecebec;
+        background-color: #FFF;
+      background-image: linear-gradient(#fff, #ECEBEC);
         width: 100%;
         height: auto;
 
