--- a/css/responsive/desktop.less
+++ b/css/responsive/desktop.less
@@ -15,10 +15,19 @@ nav {
     &.affix {
         animation: flipInX 1.25s  ease-in;
         -webkit-animation: flipInX 1.25s;
+
+        .navbar-brand {
+            cursor: default;
+
+            &:hover {
+                cursor: default;
+            }
+        }
     }
 
     &.affix-top {
-        background-color: rgba(236,235,236, 1);
+        background-color: #FFF;
+        background-image: linear-gradient(#fff, #ECEBEC);
         border-color: rgba(236,235,236, 1);
         animation: slideInDown 0.95s  ease-in;
         -webkit-animation: slideInDown 0.95s;
@@ -36,9 +45,10 @@ nav {
         .navbar-brand {
             font-size: 30px;
             color: #000;
-
+            cursor: default;
             &:hover {
                 color: #808080;
+                cursor: default;
                 -webkit-tap-highlight-color: rgba(0,0,0,0);
                 -webkit-user-select: none;
                 -webkit-touch-callout: none;
